Fix html-validate errors (those which could be).

--- a/task2/styles.scss
+++ b/task2/styles.scss
@@ -238,6 +238,7 @@ label {
         background-color: $box-hover;
       }
       iframe {
+        border: none;
         width: 100%;
         aspect-ratio: 560 / 315; // Maintain a 16:9 aspect ratio
       }
