--- a/task2/styles.css
+++ b/task2/styles.css
@@ -218,6 +218,7 @@ label {
   background-color: #ff6161;
 }
 .video-section .video-gallery .video-box iframe {
+  border: none;
   width: 100%;
   aspect-ratio: 560/315;
 }
