--- a/task4/styles.css
+++ b/task4/styles.css
@@ -1,3 +1,8 @@
+@property --angle {
+  syntax: "<angle>";
+  inherits: false;
+  initial-value: 0deg;
+}
 * {
   margin: 0;
   padding: 0;
@@ -351,20 +356,50 @@ details:hover {
   margin: 0 auto;
 }
 .video-section .video-gallery .video-box {
-  border: 2px solid #ff2e2e;
-  padding: 10px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  margin: 10px 5px;
-  transition: background-color 0.3s ease;
+  margin: 20px 5px;
+  position: relative;
+  transition: transform 0.3s ease-in-out;
 }
-.video-section .video-gallery .video-box:hover {
-  background-color: #ff6161;
+.video-section .video-gallery .video-box::after, .video-section .video-gallery .video-box::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: conic-gradient(from var(--angle), transparent 70%, #ff2e2e);
+  top: 50%;
+  left: 50%;
+  padding: 7px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  border-radius: 10px;
+  animation: spin 5s linear infinite;
+}
+.video-section .video-gallery .video-box::before {
+  filter: blur(1.5rem);
+  opacity: 0.7;
+}
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
 }
 .video-section .video-gallery .video-box iframe {
+  border-radius: 10px;
+  position: relative;
+  z-index: 2;
   border: none;
   width: 100%;
   aspect-ratio: 560/315;
+  display: block;
+}
+.video-section .video-gallery .video-box:hover::after, .video-section .video-gallery .video-box:hover::before {
+  animation-play-state: paused;
+}
+.video-section .video-gallery .video-box:hover {
+  transform: scale(1.05);
 }
 
 footer {
