--- a/task4/tail.css
+++ b/task4/tail.css
@@ -1,5 +1,171 @@
-@import "tailwindcss";
-
+/*! tailwindcss v4.0.14 | MIT License | https://tailwindcss.com */
+@layer theme, base, components, utilities;
+@layer theme {
+  :root, :host {
+    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+      "Courier New", monospace;
+    --default-font-family: var(--font-sans);
+    --default-font-feature-settings: var(--font-sans--font-feature-settings);
+    --default-font-variation-settings: var(
+      --font-sans--font-variation-settings
+    );
+    --default-mono-font-family: var(--font-mono);
+    --default-mono-font-feature-settings: var(
+      --font-mono--font-feature-settings
+    );
+    --default-mono-font-variation-settings: var(
+      --font-mono--font-variation-settings
+    );
+  }
+}
+@layer base {
+  *, ::after, ::before, ::backdrop, ::file-selector-button {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0 solid;
+  }
+  html, :host {
+    line-height: 1.5;
+    -webkit-text-size-adjust: 100%;
+    tab-size: 4;
+    font-family: var( --default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" );
+    font-feature-settings: var(--default-font-feature-settings, normal);
+    font-variation-settings: var( --default-font-variation-settings, normal );
+    -webkit-tap-highlight-color: transparent;
+  }
+  body {
+    line-height: inherit;
+  }
+  hr {
+    height: 0;
+    color: inherit;
+    border-top-width: 1px;
+  }
+  abbr:where([title]) {
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: inherit;
+  }
+  a {
+    color: inherit;
+    -webkit-text-decoration: inherit;
+    text-decoration: inherit;
+  }
+  b, strong {
+    font-weight: bolder;
+  }
+  code, kbd, samp, pre {
+    font-family: var( --default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace );
+    font-feature-settings: var( --default-mono-font-feature-settings, normal );
+    font-variation-settings: var( --default-mono-font-variation-settings, normal );
+    font-size: 1em;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub, sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  table {
+    text-indent: 0;
+    border-color: inherit;
+    border-collapse: collapse;
+  }
+  :-moz-focusring {
+    outline: auto;
+  }
+  progress {
+    vertical-align: baseline;
+  }
+  summary {
+    display: list-item;
+  }
+  ol, ul, menu {
+    list-style: none;
+  }
+  img, svg, video, canvas, audio, iframe, embed, object {
+    display: block;
+    vertical-align: middle;
+  }
+  img, video {
+    max-width: 100%;
+    height: auto;
+  }
+  button, input, select, optgroup, textarea, ::file-selector-button {
+    font: inherit;
+    font-feature-settings: inherit;
+    font-variation-settings: inherit;
+    letter-spacing: inherit;
+    color: inherit;
+    border-radius: 0;
+    background-color: transparent;
+    opacity: 1;
+  }
+  :where(select:is([multiple], [size])) optgroup {
+    font-weight: bolder;
+  }
+  :where(select:is([multiple], [size])) optgroup option {
+    padding-inline-start: 20px;
+  }
+  ::file-selector-button {
+    margin-inline-end: 4px;
+  }
+  ::placeholder {
+    opacity: 1;
+    color: color-mix(in oklab, currentColor 50%, transparent);
+  }
+  textarea {
+    resize: vertical;
+  }
+  ::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  ::-webkit-date-and-time-value {
+    min-height: 1lh;
+    text-align: inherit;
+  }
+  ::-webkit-datetime-edit {
+    display: inline-flex;
+  }
+  ::-webkit-datetime-edit-fields-wrapper {
+    padding: 0;
+  }
+  ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
+    padding-block: 0;
+  }
+  :-moz-ui-invalid {
+    box-shadow: none;
+  }
+  button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
+    appearance: button;
+  }
+  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
+    height: auto;
+  }
+  [hidden]:where(:not([hidden="until-found"])) {
+    display: none !important;
+  }
+}
+@layer utilities {
+  .block {
+    display: block;
+  }
+}
 @property --angle {
   syntax: "<angle>";
   inherits: false;
@@ -10,21 +176,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: Arial, sans-serif;
   background-color: #eeeeee;
   color: #333;
 }
-
 .center-text {
   text-align: center;
 }
-
 .light-shadow {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
-
 .f1-header {
   background-color: #ff2e2e;
   color: #fff;
@@ -69,11 +231,9 @@ body {
   color: #333;
   border: 1px solid #333;
 }
-
 #title {
   font-size: 2.5rem;
 }
-
 .main-content {
   width: 90%;
   max-width: 1100px;
@@ -82,7 +242,6 @@ body {
   background-color: #ffffff;
   border-radius: 5px;
 }
-
 .base-section {
   margin: 20px 0 60px 0;
   border-radius: 5px;
@@ -96,7 +255,6 @@ body {
 .base-section:last-child {
   margin-bottom: 0;
 }
-
 .winners-table {
   margin: 30px auto;
   border-collapse: collapse;
@@ -107,8 +265,7 @@ body {
   margin-bottom: 10px;
   font-style: italic;
 }
-.winners-table th,
-.winners-table td {
+.winners-table th, .winners-table td {
   padding: 8px;
   border: 1px solid #999;
   text-align: center;
@@ -117,7 +274,6 @@ body {
 .winners-table th {
   background-color: #ccc;
 }
-
 .ranking-list {
   list-style: none;
   counter-reset: ranking-counter;
@@ -141,7 +297,6 @@ body {
   color: #ff2e2e;
   font-size: 1.8rem;
 }
-
 figure {
   text-align: center;
   margin: 20px 0;
@@ -161,7 +316,6 @@ figure figcaption {
   margin-top: 5px;
   color: #555;
 }
-
 details {
   padding: 20px;
   background: #f9f9f9;
@@ -190,7 +344,6 @@ details p:first-child {
 details:hover {
   background: white;
 }
-
 #myForm {
   max-width: 800px;
   margin: 0 auto 20px auto;
@@ -215,8 +368,7 @@ details:hover {
   font-weight: 600;
   color: #333;
 }
-#myForm fieldset select,
-#myForm fieldset input {
+#myForm fieldset select, #myForm fieldset input {
   width: calc(100% - 10px);
   padding: 8px;
   font-size: 1rem;
@@ -225,8 +377,7 @@ details:hover {
   background: #ffffff;
   transition: 0.2s ease;
 }
-#myForm fieldset select:focus,
-#myForm fieldset input:focus {
+#myForm fieldset select:focus, #myForm fieldset input:focus {
   border-color: #e10600;
   outline: none;
   box-shadow: 0 0 5px rgba(225, 6, 0, 0.6);
@@ -247,7 +398,6 @@ details:hover {
 #myForm fieldset button:hover {
   background: #fa0000;
 }
-
 #responseMessage {
   display: none;
   margin: 15px auto;
@@ -283,13 +433,11 @@ details:hover {
     transform: translateY(-10px);
   }
 }
-
 .progress-section {
   width: 90%;
   max-width: 800px;
   margin: 30px auto;
 }
-
 .progress-bar-background {
   position: relative;
   width: 100%;
@@ -299,7 +447,6 @@ details:hover {
   height: 50px;
   margin: 0 auto 10px auto;
 }
-
 #progress-bar {
   height: 50px;
   background-color: #91cc7a;
@@ -307,7 +454,6 @@ details:hover {
   transition: width 2s;
   position: relative;
 }
-
 .car-container {
   position: absolute;
   top: 50%;
@@ -318,14 +464,12 @@ details:hover {
   width: 80px;
   height: auto;
 }
-
 .map-section img {
   border: 2px dashed #333;
   border-radius: 5px;
   max-width: 100%;
   height: auto;
 }
-
 @media (max-width: 800px) {
   .map-section {
     display: none;
@@ -403,7 +547,6 @@ details:hover {
 .video-section .video-gallery .video-box:hover {
   transform: scale(1.05);
 }
-
 footer {
   background-color: #ff2e2e;
   color: #fff;
@@ -411,15 +554,13 @@ footer {
   text-align: center;
   margin-top: 40px;
 }
-
 @media (max-width: 800px) {
   .video-section .video-gallery {
     flex-direction: column-reverse;
   }
 }
 @media (min-width: 800px) {
-  h2:hover,
-  h3:hover {
+  h2:hover, h3:hover {
     background-color: #f2f2f2;
   }
 }
@@ -428,21 +569,23 @@ footer {
   justify-content: flex-start;
   align-items: center;
 }
-
 .justify-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .justify-right {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-
 .justify-between {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}/*# sourceMappingURL=styles.css.map */
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
